# Stratum

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: release.yml
crates/examples/: Cargo.toml  level_fs.rs  stratum_advanced.rs  stratum_basic.rs  voxel_world.rs
crates/examples/voxel_world/: app.rs  biomes.rs  blocks.rs  camera.rs  chunks.rs  main.rs  materials.rs  noise.rs  player.rs  terrain.rs  voxel_grid.rs
crates/examples/voxel_world/generation/: mod.rs  structures.rs  villages.rs
crates/examples/voxel_world/prefabs/: houses.rs  mod.rs  towers.rs  trees.rs  village.rs  waterways.rs
crates/stratum/: Cargo.toml
crates/stratum-helio/: Cargo.toml
crates/stratum-helio/src/: asset_registry.rs  bridge.rs  integration.rs  lib.rs
crates/stratum/src/: camera.rs  camera_registry.rs  chunk.rs  entity.rs  level.rs  lib.rs  mode.rs  partition.rs  prefab.rs  render_graph.rs  render_view.rs  stratum.rs  visibility.rs
crates/stratum/src/level_fs/: format.rs  io.rs  mod.rs  prefab_io.rs  streaming.rs
